--- a/index.html
+++ b/index.html
@@ -25,9 +25,44 @@
                 <li><a href="pages/feedback.html">Обратная связь</a></li>
             </ul>
         </nav>
-        <div>
-            <script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3Aaf420ef6fdc2e5cfeee327730746d93710a1160756e2fc74e629f829ffb520de&amp;width=1040&amp;height=720&amp;lang=ru_RU&amp;scroll=true"></script>
-        </div>
+       <div class="slide-container">
+            <div 
+                class="slide"
+                style="background-image: url('https://images.unsplash.com/photo-1591123120675-6f7f1aae0e5b?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1169&q=80');"
+            >
+                <h3>Школа</h3>
+            </div>
+            <div 
+                class="slide"
+                style="background-image: url('https://images.unsplash.com/photo-1611153532158-7fbd608cbb2a?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80');"
+            >
+                <h3>Игровая площадка</h3>
+            </div>
+            <div 
+                class="slide"
+                style="background-image: url('https://images.unsplash.com/photo-1609767768775-30f9e0319f97?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80');"
+            >
+                <h3>Всегда свежие продукты</h3>
+            </div>
+            <div 
+                class="slide"
+                style="background-image: url('https://images.unsplash.com/photo-1558259264-803b347ac0fd?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80');"
+            >
+                <h3>Уютный парк</h3>
+            </div>
+            <div 
+                class="slide"
+                style="background-image: url('https://images.unsplash.com/photo-1452626038306-9aae5e071dd3?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1174&q=80');"
+            >
+                <h3>Активные выходные</h3>
+            </div>
+            <div 
+                class="slide active"
+                style="background-image: url('https://images.unsplash.com/photo-1528698827591-e19ccd7bc23d?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1176&q=80');"
+            >
+                <h3>Разные магазины</h3>
+            </div>
+       </div>
         <footer>
             <div class="blocks">
                 <div class="block">
@@ -39,5 +74,7 @@
             </div>
         </footer>
     </div>
+
+    <script src="app.js"></script>
 </body>
 </html>
