--- a/pages/useful-contacts.html
+++ b/pages/useful-contacts.html
@@ -21,17 +21,34 @@
             </div>
         </div>
     </header>
-    <div class="current-events">
-        <h3>Наименование организации</h3>
-        <p>Текст события. <br> Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quod consequatur quia quidem architecto, deleniti quo ipsa pariatur, possimus nulla iusto natus maxime soluta quisquam. In corporis saepe consectetur natus a.</p>
-    </div>
-    <div class="current-events">
-        <h3>Наименование организации</h3>
-        <p>Текст события. <br> Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quod consequatur quia quidem architecto, deleniti quo ipsa pariatur, possimus nulla iusto natus maxime soluta quisquam. In corporis saepe consectetur natus a.</p>
-    </div>
-    <div class="current-events">
-        <h3>Наименование организации</h3>
-        <p>Текст события. <br> Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quod consequatur quia quidem architecto, deleniti quo ipsa pariatur, possimus nulla iusto natus maxime soluta quisquam. In corporis saepe consectetur natus a.</p>
+    <div class="tasks-container">
+        <section class="tasks">
+            <ul class="tasks_list">
+                <li class="tasks_item"
+                draggable="true">
+                <div>
+                    <h3>Наименование события</h3>
+                    <p>Текст события. <br> Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quod consequatur quia quidem architecto, deleniti quo ipsa pariatur, possimus nulla iusto natus maxime soluta quisquam. In corporis saepe consectetur natus a.</p>
+                </div>
+                </li>
+                <li class="tasks_item"
+                draggable="true">
+                    Наименование организации 2
+                </li>
+                <li class="tasks_item"
+                draggable="true">
+                    Наименование организации 3
+                </li>
+                <li class="tasks_item"
+                draggable="true">
+                    Наименование организации 4
+                </li>
+                <li class="tasks_item"
+                draggable="true">
+                    Наименование организации 5
+                </li>
+            </ul>
+        </section>
     </div>
     <footer>
         <div class="blocks">
@@ -43,5 +60,6 @@
             </div>
         </div>
     </footer>
+    <script src="../app.js"></script>
 </body>
 </html>
