--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <ul>
                 <li><a href="pages/news.html">Новости</a></li>
                 <li><a href="pages/beneficence.html">Благотворительность</a></li>
-                <li><a href="/pages/photo_reports.html">Фото репортажи</a></li>
+                <li><a href="pages/photo_reports.html">Фото репортажи</a></li>
                 <li><a href="pages/useful-contacts.html">Полезные контакты</a></li>
                 <li><a href="pages/feedback.html">Обратная связь</a></li>
             </ul>
