--- a/pages/photo_reports.html
+++ b/pages/photo_reports.html
@@ -54,6 +54,6 @@
           </button>
         </div>
     </div>
-    <script src="/../js/photo_reports.js"></script>
+    <script src="../js/photo_reports.js"></script>
 </body>
 </html>
