--- a/pages/photo-reports.html
+++ b/pages/photo-reports.html
@@ -9,7 +9,7 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"
     />
-    <link rel="stylesheet" href="../css/photo_reports.css">
+    <link rel="stylesheet" href="../css/photo-reports.css">
 </head>
 <body>
     <div class="container">
@@ -54,6 +54,6 @@
           </button>
         </div>
     </div>
-    <script src="../js/photo_reports.js"></script>
+    <script src="../js/photo-reports.js"></script>
 </body>
 </html>
